--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none  # ? ?????: ????????? ????????????!
+      ddl-auto: none
     show-sql: true
 
   liquibase:
